Fix spacing on main page (because of example content width change)

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -136,8 +136,12 @@ $sidebar-width: 13rem;
 	position: relative;
 
 	.splash-image--content {
+		align-items: flex-end;
 		display: flex;
 		height: 100%;
+		margin: auto;
+		max-width: $example-global-content-width;
+		padding-bottom: 2rem;
 	}
 
 	.splash-image--title {
